--- a/coffee/css/style.css
+++ b/coffee/css/style.css
@@ -1,45 +1,56 @@
+header {
+    z-index: 9999;
+}
 
 header .overlay {
-    position: relative;
+    position: absolute;
 }
+
 header .kok {
-    position:fixed;
+    position: fixed;
     bottom: 0;
     right: 0;
     cursor: pointer;
-    z-index:999;
+    z-index: 99;
 }
-.visible{
+
+.visible {
     visibility: visible;
 }
 
-#backtotop{
+#backtotop {
     visibility: hidden;
 }
 
-.overlay{
+.overlay {
     background-color: #6c757d;
-    width: 100%;
-    height: 100vh;
     opacity: .6;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    position: absolute;
 }
+
 .navbar-light .navbar-brand,
-.navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
-.navbar-light .navbar-nav .show>.nav-link,
-.navbar-light .navbar-nav .nav-link
-{
+.navbar-light .navbar-nav .show > .nav-link,
+.navbar-light .navbar-nav .nav-link {
     color: white;
 }
+
 header .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-brand:focus,
-.navbar-light .navbar-brand:hover
-{
+.navbar-light .navbar-brand:hover {
     color: red;
 }
-header{
+
+header {
     background-image: url("../img/header-img.jpg");
     -webkit-background-size: cover;
     -o-background-size: cover;
@@ -50,90 +61,111 @@ header{
     color: white;
     position: relative;
 }
-header .text-center{
+
+header .text-center {
     padding-top: 250px;
 }
-header .text-center h1{
+
+header .text-center h1 {
     font-size: 40px;
 }
-header .text-center p:last-of-type{
+
+header .text-center p:last-of-type {
     font-size: 30px;
 }
-header .text-center .btn-primary{
+
+header .text-center .btn-primary {
     margin-top: 30px;
     width: 150px;
     background-color: red;
 }
+
 /*header .koko{
 margin: 70px 0 0 1200px;
 }*/
-    /*start Artical*/
-.artical{
+/*start Artical*/
+.artical {
     padding: 60px 0 60px 0;
 }
-.artical .container .art .arti{
+
+.artical .container .art .arti {
     padding: 30px;
 }
-.artical .container .art .arti:hover{
+
+.artical .container .art .arti:hover {
     color: #6c757d;
     transition: 0.2s ease-in-out;
-    box-shadow:1px 1px 10px gainsboro , 1px 1px  gainsboro inset;
+    box-shadow: 1px 1px 10px gainsboro, 1px 1px gainsboro inset;
 }
-.artical .container .art h1{
+
+.artical .container .art h1 {
     font-size: 20px;
     text-align: center;
 }
+
 /*End Artical*/
 
 /*start laoreet*/
-.laoreet{
+.laoreet {
     background-image: url("../img/header-img.jpg");
     -webkit-background-size: cover;
     -o-background-size: cover;
     -moz-background-size: cover;
-    background-size:cover ;
+    background-size: cover;
     height: 100vh;
     width: 100vw;
+    position: relative; /*mi5a*/
 }
+
 .laoreet .container .head,
-.laoreet .container .lao{
+.laoreet .container .lao {
     color: white;
     border-radius: 50px;
 }
-.laoreet .container .lao iframe{
+
+.laoreet .container .lao iframe {
     margin-top: 20px;
+    width: 350px;
+    height: 200px;
 }
-.laoreet .container .lao .btn{
+
+.laoreet .container .lao .btn {
     margin-top: 30px;
 }
+
 .laoreet .container .lao h5,
-.laoreet .container .lao p{
+.laoreet .container .lao p {
     margin: 20px 0 0 0;
     padding-top: 20px;
 }
-.laoreet .container h1{
+
+.laoreet .container h1 {
     padding-top: 100px;
     text-align: center;
 }
-.laoreet .container h6{
+
+.laoreet .container h6 {
     display: block;
     height: 2px;
     width: 50px;
     background-color: red;
-    margin-left: 550px;
+    margin: auto;
 
 }
+
 /*end laoreet*/
 
 /*start gallary*/
-.gallery{
+.gallery {
     padding-top: 10px;
 }
+
 .gallery .photo-left:hover img {
     opacity: 0.3;
 
 }
-.gallery .container  .middle{
+
+.gallery .container .middle {
     transition: .5s ease;
     opacity: 0;
     position: absolute;
@@ -143,96 +175,109 @@ margin: 70px 0 0 1200px;
     -ms-transform: translate(-50%, -50%);
     text-align: center;
 }
+
 .gallery .photo-left:hover .middle {
     opacity: 1;
 }
-.gallery img{
+
+.gallery img {
     height: 75vh;
     border: none;
 }
-.gallery .photo-right img{
+
+.gallery .photo-right img {
     height: 37.5vh;
     border: none;
 }
+
 /*End gallary*/
 
 /*Start section*/
-section{
+section {
     padding-bottom: 80px;
 }
 
-section .container h1{
+section .container h1 {
     padding-top: 100px;
     text-align: center;
 }
-section .container h6{
+
+section .container h6 {
     display: block;
     height: 2px;
     width: 50px;
     background-color: red;
-    margin-left: 550px;
+    margin: auto;
 }
 
-section .sec{
+section .sec {
     margin-top: 80px;
 }
-section .container .sec .price{
+
+section .container .sec .price {
     list-style: none;
-    box-shadow:1px 1px 10px gainsboro , 1px 1px  gainsboro inset;
-    padding:0 ;
+    box-shadow: 1px 1px 10px gainsboro, 1px 1px gainsboro inset;
+    padding: 0;
     text-align: center;
-    color:#929292;
+    color: #929292;
     border-radius: 20px;
 
 }
-section .container .sec .price-1{
+
+section .container .sec .price-1 {
     padding-bottom: 20px;
     color: #474747;
 }
-section .container .sec .price-1 strong{
+
+section .container .sec .price-1 strong {
     font-size: 40px;
 }
-section .container .sec .price li
-{
+
+section .container .sec .price li {
     padding-top: 20px;
 }
-section .container .sec .price .btn{
+
+section .container .sec .price .btn {
     margin-top: 10px;
     background-color: red;
     margin-bottom: 20px;
 }
-section .container .sec .price .btn:hover{
+
+section .container .sec .price .btn:hover {
     background-color: white;
     color: #6c757d;
 }
-section .container .sec .price .vul{
-    background-color:#2B2F32;
+
+section .container .sec .price .vul {
+    background-color: #2B2F32;
     color: white;
     padding: 20px;
     text-align: center;
 
 }
+
 /*End section*/
 
-
 /*start counter*/
-.counter{
-    background-image:url("../img/tina-guina-639046-unsplash-min.jpg");
-    -webkit-background-size: cover;
-    -o-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    background-attachment:fixed;
-    height:40vh;
+.counter {
+    background-image: url("../img/tina-guina-639046-unsplash-min.jpg");
+    border-radius: 55px;
+    -webkit-background-size: 100% 100%;
+    -o-background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    height: 40vh;
     text-align: center;
     padding-top: 100px;
     margin-bottom: 50px;
     color: white;
 }
+
 /*End counter*/
 
 /*start slides*/
-.solider .carousel-item{
+.solider .carousel-item {
     height: 75vh;
     background-image: url("../img/emre-gencer-364602-unsplash-min.jpg");
     -webkit-background-size: cover;
@@ -240,24 +285,30 @@ section .container .sec .price .vul{
     -moz-background-size: cover;
     background-size: cover;
 }
+
 .solider .carousel-caption img {
     border-radius: 50%;
     width: 150px;
     height: 150px;
     margin-bottom: 50px;;
 }
+
+
+
 /*End slides*/
 /*start footer*/
-.footer .foot{
+.footer .foot {
     padding-top: 20px;
     padding-bottom: 10px;
     background-color: #33363B;
     color: white;
 }
-.footer .foot p{
-color:#a9a3a3;
+
+.footer .foot p {
+    color: #a9a3a3;
 }
-.footer .fot{
+
+.footer .fot {
     background-color: #191E22;
     color: #6A6E71;
     padding: 20px 0;
@@ -265,9 +316,14 @@ color:#a9a3a3;
 }
 
 /*responsive for mibile*/
-@media(max-width: 991px) {
+@media screen and (max-width: 571px) {
     h1 {
+
         font-size: 20px;
+    }
+
+    p {
+        font-size: 12px;
     }
 
     header {
@@ -276,66 +332,73 @@ color:#a9a3a3;
         -o-background-size: cover;
         -moz-background-size: cover;
         background-size: cover;
-        height: 100vh;
+        height: 140vh;
         width: 100vw;
         color: white;
-    }
-
-    .overlay {
-        width: 100%;
-        height: auto;
-        opacity: 1;
+        position: relative;
     }
 
     .overlay .mikhail {
-        display: none
-    }
-
-    .overlay .ko{
-        float: left;
-    }
-
-    .navbar-light .navbar-brand,
-    .navbar-light .navbar-nav .active > .nav-link,
-    .navbar-light .navbar-nav .nav-link.active,
-    .navbar-light .navbar-nav .nav-link.show,
-    .navbar-light .navbar-nav .show > .nav-link,
-    .navbar-light .navbar-nav .nav-link {
-        color: red;
-    }
-
-    header .text-center,
-    header .text-center h1,
-    header .text-center p:last-of-type,
-    header .text-center .btn-primary {
         display: none;
     }
 
-
-
-    /*start gallary*/
-    .gallery {
-        margin-top: 200px;
-        padding-top: 50px;
+    /*start laoreet*/
+    .laoreet {
+        background-image: url("../img/header-img.jpg");
+        -webkit-background-size: cover;
+        -o-background-size: cover;
+        -moz-background-size: cover;
+        background-size: auto;
+        height: 140vh;
+        width: 100vw;
+        position: relative;
     }
 
+    .laoreet .container .lao iframe {
+        margin-top: 20px;
+        width: 200px;
+        height: 150px;
+    }
+
+    /*end laoreet*/
+    /*start gallary*/
     .gallery .photo-left:hover img {
         opacity: 0.3;
 
     }
 
+    .gallery .container .middle {
+        transition: .5s ease;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        text-align: center;
+    }
+
+    .gallery .photo-left:hover .middle {
+        opacity: 1;
+    }
 
     .gallery img {
-        height: 51vh;
+        height: 75vh;
+        border: none;
     }
 
     .gallery .photo-right img {
-        height: 25.5vh;
+        height: 37.5vh;
+        border: none;
     }
 
-    /*End gallery*/
+    /*End gallary*/
+    /*start counter*/
+    .counter .count {
+        width: 25%;
+    }
+    /*End counter*/
+
 
 }
-
-
 
